...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_close_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.close()}"
            style="@style/CloseImageView"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginEnd="36dp"
            android:text="@string/log_in_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/email"
...
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{viewModel::onEmailTextChanged}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/password"
...
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:onTextChanged="@{viewModel::onPasswordTextChanged}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="@id/et_layout_password"
            app:layout_constraintStart_toStartOf="@id/et_layout_password"
            app:layout_constraintTop_toBottomOf="@id/et_layout_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register_suggestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onSuggestionClicked()}"
            android:text="@string/register_suggestion"
            android:textAlignment="center"
...
