<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.inlay.hotelroomservice.presentation.viewmodels.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_general"
                style="@style/Widget.Material3.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleEnabled="true">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="16dp"
                    android:onClick="@{() -> viewModel.edit()}"
                    android:src="@drawable/outline_edit_24" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
            app:profileImageSrc="@{viewModel.profileImage}"
            tools:src="@drawable/baseline_person_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.userName}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toEndOf="@id/img_user_profile"
            app:layout_constraintTop_toTopOf="@id/img_user_profile"
            tools:text="User Full Name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.userEmail}"
            app:layout_constraintStart_toEndOf="@id/img_user_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            tools:text="usermail@mail.com" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/layout_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.logout()}"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_logout_icon"
                style="@style/LogoutImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/logout"
                android:textAppearance="?attr/textAppearanceBodyLarge" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>